welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T =new Array[Color](getMondeHauteur()){
		for (i <- 0 to getMondeHauteur()-1){
			val decalage = litMessage().toInt
			T(i)=getCouleurSol()
			avance()	
		}
		for (i <- 0 to getMondeLargeur()-2){
			recule(5)
			gauche()
			avance()
			droite()
			for (i <- 0 to getMondeHauteur()-1){
				setCouleurBrosse(T(i))
				baisseBrosse()
				leveBrosse()
			}
		}
	}
		
}
